add conditional constructions

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "test"
   },
   "dependencies": {
+    "@fastify/autoload": "^6.0.0",
+    "@fastify/sensible": "^6.0.0",
+    "@fastify/view": "^10.0.2",
     "abort-controller": "^3.0.0",
     "abstract-logging": "^2.0.1",
     "ajv": "^8.17.1",
@@ -79,6 +82,7 @@
     "pkg-up": "^3.1.0",
     "process": "^0.11.10",
     "process-warning": "^4.0.1",
+    "pug": "^3.0.3",
     "pump": "^3.0.2",
     "quick-format-unescaped": "^4.0.4",
     "readable-stream": "^3.6.2",
@@ -106,9 +110,7 @@
     "util-deprecate": "^1.0.2",
     "walker": "^1.0.8",
     "wrappy": "^1.0.2",
-    "yargs-parser": "^21.1.1",
-    "@fastify/autoload": "^6.0.0",
-    "@fastify/sensible": "^6.0.0"
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "c8": "^10.1.2"
