--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/static": "^8.1.1",
     "@fastify/view": "^10.0.2",
     "abort-controller": "^3.0.0",
     "abstract-logging": "^2.0.1",
@@ -20,6 +21,7 @@
     "avvio": "^9.1.0",
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
+    "bootstrap": "^5.3.3",
     "brace-expansion": "^2.0.1",
     "buffer": "^6.0.3",
     "chalk": "^4.1.2",
